--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   },
   "dependencies": {
     "@types/gsap": "^3.0.0",
+    "@types/nodemailer": "^6.4.17",
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.5.1",
     "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.18.1",
     "gsap": "^3.12.5",
     "next": "15.1.3",
+    "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-imask": "^7.6.1",
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0"
   },
